form validation for emergency contacts

--- a/samples/patient-demographics-example/app/styles/main.css
+++ b/samples/patient-demographics-example/app/styles/main.css
@@ -1,6 +1,8 @@
-.basic-info-form input.ng-invalid.ng-touched {
+.basic-info-form input.ng-invalid.ng-touched,
+.contact-info-form input.ng-invalid.ng-touched {
   background-color: #FA787E;
 }
+
 
 .help-block {
   color: red;
