:pizza: John Papa style guide impl :pizza:

--- a/samples/angular-patient-demographics-example/app/styles/main.css
+++ b/samples/angular-patient-demographics-example/app/styles/main.css
@@ -1,3 +1,5 @@
+/** TODO: split up CSS into the modules... tweak grunt to do this */
+
 .basic-info-form input.ng-invalid.ng-touched,
 .contact-info-form input.ng-invalid.ng-touched {
   background-color: #FA787E;
