Basic component validation final tweaks

--- a/samples/react-redux-patient-demographics-example/src/styles/core.scss
+++ b/samples/react-redux-patient-demographics-example/src/styles/core.scss
@@ -19,3 +19,11 @@ body {
 *:after {
   box-sizing: inherit;
 }
+
+.help-block {
+  color: red;
+  border: red solid 1px;
+  display: inline-block;
+  padding: 0 5px;
+  margin-bottom: 5px;
+}
